terminasmo cambias un poco los estilos y terminamos la funcionalidad... ampliaremos a mas funciones como potencia, raiz y ya veremos...

--- a/src/hojas-de-estilo/Boton.css
+++ b/src/hojas-de-estilo/Boton.css
@@ -13,10 +13,12 @@
   margin: 4px;
   cursor: pointer;
   user-select: none;
+  box-shadow: -4px 1px 1px 1px rgb(45, 42, 42);
 }
 
 .boton-contenedor:hover {
   background-color: #5a01a7;
+  box-shadow: none;
 }
 
 .operador {
